# TSPPartitionHeuristic

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake_build_test.yml  cmake_build_test_macos.yml  cmake_build_test_win.yml  cmake_build_test_win_macos.yml
src/model/: TSPHeuAlgo.c  TSPHeuAlgo.h  TSPModel.c  TSPModel.h  distanceGenFunctions.c  distanceGenFunctions.h  model.c  model.h  reconstructionFunctions.c  reconstructionFunctions.h
src/sampler/: sampler.c  sampler.h
test/: CMakeLists.txt  FindHIGHS.cmake  testAlgorithmMinDerivAllReconstructions.c  testSolver.c  testSolverInclusion.c  testTSPModelAvgDistFunction.c  testTSPModelAvgDistFunctionSaving.c  testTSPModelConnectionChecks.c  testTSPModelCorrectnessChecks.c  testTSPModelCostChecks.c  testTSPModelCreate.c  testTSPModelMaxDistFunction.c  testTSPModelMaxDistFunctionSaving.c  testTSPModelMetaModelChecks.c  testTSPModelMetadata.c  testTSPModelMinDistFunction.c  testTSPModelMinDistFunctionSaving.c  testTSPModelMinReconstruction.c  testTSPModelSavingReconstruction.c  testWholeAlgorithm.c
test/AMPL_creator/: AMPLDatCreator.c
test/resources/: 33_5_4.txt  340206692_36_53.txt  34545235_2_150.txt  34545235_40_25.txt  42_20_100.txt  47490834_47_79.txt  6755_30_37.txt
test/resources_creator/: instanceCreator.c
test/solvers/: highsSolver.c  highsSolver.h
